ci: update workflows to integrate dubbd-iac-aws (#534)
Co-authored-by: MxNxPx <MxNxPx@users.noreply.github.com>

--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -20,6 +20,14 @@ jobs:
       - id: release-flag
         run: echo "release_created=${{ steps.tag.outputs.release_created || false }}" >> $GITHUB_OUTPUT
 
+  publish-ci-dubbd-iac-aws:
+    needs: tag-new-version
+    if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
+    uses: ./.github/workflows/publish.dubbd.package.yaml
+    with:
+      working_dir: .github/workflows/ci-dubbd-iac-aws
+    secrets: inherit
+
   publish-dubbd-aws:
     needs: tag-new-version
     if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
