--- a/.github/workflows/test-dubbd-aws-upgrade.yaml
+++ b/.github/workflows/test-dubbd-aws-upgrade.yaml
@@ -12,6 +12,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Free GH runner space
+        run: |
+          df -h
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          df -h
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -32,7 +42,16 @@ jobs:
           role-duration-seconds: 21600
 
       - uses: ./.github/actions/create-zarf-package
-        name: Create Zarf package
+        name: Create CI-DUBBD-IAC-AWS Zarf package
+        with:
+          username: ${{ secrets.REGISTRY1_USERNAME }}
+          password: ${{ secrets.REGISTRY1_PASSWORD }}
+          working-dir: .github/workflows/ci-dubbd-iac-aws
+          download-init-package: true
+          timeout-minutes: 60
+
+      - uses: ./.github/actions/create-zarf-package
+        name: Create DUBBD-AWS Zarf package
         with:
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
@@ -71,32 +90,82 @@ jobs:
         run: |
           zarf init -a amd64 --components=git-server --confirm
 
-      - name: Deploy latest package version
+      - name: Deploy latest CI-DUBBD-IAC-AWS OCI package version
+        id: deploy-ci-dubbd-iac-aws-oci
         env:
           SHA: ${{ github.sha }}
         run: |
+          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+
+          # deploys the IAC needed for dubbd-aws
           zarf package deploy \
-            oci://ghcr.io/defenseunicorns/packages/dubbd-aws:${{ steps.latest-package-version.outputs.latest-package-version }} \
+            oci://ghcr.io/defenseunicorns/packages/ci-dubbd-iac-aws:${{ steps.latest-package-version.outputs.latest-package-version }} \
             --set ephemeral=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
             --set state_bucket_name="uds-ci-state-bucket" \
-            --set state_key="tfstate/ci/upgrade/${SHA:0:7}-dubbd-aws" \
+            --set state_key="tfstate/ci/upgrade/${SHA:0:7}-dubbd-aws.tfstate" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
+
+            # adds ZARF_PACKAGE_DEPLOY_SET env var for use in zarf package deploy
+            echo "zarf_oci_pkg_env_vars=$(cat setenv-dubbd-package.sh)" >> $GITHUB_OUTPUT
+        working-directory: .github/workflows/ci-dubbd-iac-aws
+        timeout-minutes: 60
+
+      - name: Deploy latest DUBBD-AWS OCI package version
+        env:
+          SHA: ${{ github.sha }}
+        run: |
+          ${{ steps.deploy-ci-dubbd-iac-aws-oci.outputs.zarf_oci_pkg_env_vars }}
+          env | grep ZARF_PACKAGE_DEPLOY_SET
+
+          zarf package deploy \
+            oci://ghcr.io/defenseunicorns/packages/dubbd-aws:${{ steps.latest-package-version.outputs.latest-package-version }} \
+            --set domain=bigbang.dev \
+            --set key_file=bigbang.dev.key \
+            --set cert_file=bigbang.dev.cert \
+            --set private_admin_lb=true \
+            --set private_tenant_lb=true \
+            --confirm
         working-directory: aws/dubbd-aws
+        timeout-minutes: 60
+
+      - name: Deploy CI-DUBBD-IAC-AWS
+        id: deploy-ci-dubbd-iac-aws
+        env:
+          SHA: ${{ github.sha }}
+        run: |
+          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+          ${{ steps.deploy-ci-dubbd-iac-aws-oci.outputs.zarf_oci_pkg_env_vars }}
+          env | grep ZARF_PACKAGE_DEPLOY_SET
+
+          # deploys the IAC needed for dubbd-aws
+          zarf package deploy zarf-package-*.tar.zst \
+            --set ephemeral=true \
+            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+            --set state_bucket_name="uds-ci-state-bucket" \
+            --set state_key="tfstate/ci/upgrade/${SHA:0:7}-dubbd-aws.tfstate" \
+            --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
+            --confirm
+
+            # adds ZARF_PACKAGE_DEPLOY_SET env var for use in zarf package deploy
+            echo "zarf_pkg_env_vars=$(cat setenv-dubbd-package.sh)" >> $GITHUB_OUTPUT
+        working-directory: .github/workflows/ci-dubbd-iac-aws
         timeout-minutes: 60
 
       - name: Deploy DUBBD-AWS
         env:
           SHA: ${{ github.sha }}
         run: |
-          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+          ${{ steps.deploy-ci-dubbd-iac-aws.outputs.zarf_pkg_env_vars }}
+          env | grep ZARF_PACKAGE_DEPLOY_SET
+
           zarf package deploy zarf-package-*.tar.zst \
-            --set ephemeral=true \
-            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --set state_bucket_name="uds-ci-state-bucket" \
-            --set state_key="tfstate/ci/upgrade/${SHA:0:7}-dubbd-aws" \
-            --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
+            --set domain=bigbang.dev \
+            --set key_file=bigbang.dev.key \
+            --set cert_file=bigbang.dev.cert \
+            --set private_admin_lb=true \
+            --set private_tenant_lb=true \
             --confirm
         working-directory: aws/dubbd-aws
         timeout-minutes: 60
@@ -105,6 +174,13 @@ jobs:
         if: always()
         run: zarf package remove zarf-package-*.tar.zst --confirm
         working-directory: aws/dubbd-aws
+        timeout-minutes: 60
+        continue-on-error: true
+
+      - name: Remove CI-DUBBD-IAC-AWS
+        if: always()
+        run: zarf package remove zarf-package-*.tar.zst --confirm
+        working-directory: .github/workflows/ci-dubbd-iac-aws
         timeout-minutes: 60
         continue-on-error: true
 
