fix: add missing import on zarf component

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -38,6 +38,8 @@ variables:
 components:
   - name: set-ephemeral
     required: true
+    import:
+      path: ../../defense-unicorns-distro
     actions:
       onDeploy:
         before:
