--- a/.github/workflows/ci-dubbd-iac-aws/zarf-config.yaml
+++ b/.github/workflows/ci-dubbd-iac-aws/zarf-config.yaml
@@ -8,16 +8,12 @@ package:
       # -- Name of the EKS cluster
       name: "big-bang-aws"
       # -- Name of existing Terraform state bucket
-      state_bucket_name: uds-dev-state-bucket
+      state_bucket_name: "uds-dev-state-bucket"
       # -- Key path to Terraform state file within the bucket
-      state_key: tfstate/dev/uds-dev-state-bucket.tfstate
+      state_key: "tfstate/dev/uds-dev-state-bucket.tfstate"
       # -- Name of DynamoDB table used for Terraform state locking
-      state_dynamodb_table_name: uds-dev-state-dynamodb
+      state_dynamodb_table_name: "uds-dev-state-dynamodb"
       # -- AWS region
-      region: us-west-2
+      region: "us-west-2"
       # -- If set to true, force delete all resources on removal (i.e. loki S3 bucket, PVCs, etc)
-      ephemeral: false
-      # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-loki-"
-      #loki_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
-      # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-velero-"
-      #velero_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
+      ephemeral: "true"
