--- a/.github/workflows/ci-dubbd-iac-aws/zarf.yaml
+++ b/.github/workflows/ci-dubbd-iac-aws/zarf.yaml
@@ -28,7 +28,7 @@ variables:
 
   - name: EPHEMERAL
     description: "Set whether the cluster should be considered ephemeral - if true all resources will be force destroyed on removal"
-    default: "false"
+    default: "true"
   - name: LOKI_FORCE_DESTROY
     description: "If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket. Overrides ephemeral setting."
   - name: VELERO_FORCE_DESTROY
