--- a/aws/dubbd-aws/zarf-config.yaml
+++ b/aws/dubbd-aws/zarf-config.yaml
@@ -6,32 +6,33 @@ package:
       bigbang_version: "2.8.0"
       # should line up with the flux version in the BB release, see https://repo1.dso.mil/big-bang/bigbang/-/blob/master/base/flux/gotk-components.yaml#L3
       flux_version: "2.0.1"
-      terraform_version: "1.4.2"
   deploy:
     set:
       # -- Domain name for the EKS cluster
-      domain: bigbang.dev
+      domain: "bigbang.dev"
       # -- TLS key
-      key_file: bigbang.dev.key
+      key_file: "bigbang.dev.key"
       # -- TLS cert
-      cert_file: bigbang.dev.cert
+      cert_file: "bigbang.dev.cert"
       # -- Name of the EKS cluster
       name: "big-bang-aws"
-      # -- Name of existing Terraform state bucket
-      state_bucket_name: uds-dev-state-bucket
-      # -- Key path to Terraform state file within the bucket
-      state_key: tfstate/dev/uds-dev-state-bucket.tfstate
-      # -- Name of DynamoDB table used for Terraform state locking
-      state_dynamodb_table_name: uds-dev-state-dynamodb
-      # -- AWS region
-      region: us-west-2
       # -- Provision a private/internal load balancer for the admin ingress gateway, if false a public load balancer will be provisioned
-      private_admin_lb: true
+      private_admin_lb: "true"
       # -- Provision a private/internal load balancer for the tenant ingress gateway, if false a public load balancer will be provisioned
-      private_tenant_lb: true
-      # -- If set to true, force delete all resources on removal (i.e. loki S3 bucket, PVCs, etc)
-      ephemeral: false
-      # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-loki-"
-      #loki_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
-      # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-velero-"
-      #velero_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
+      private_tenant_lb: "true"
+      # -- If set to true, delete PVs on removal
+      ephemeral: "false"
+      # -- AWS S3 bucket for use with Loki
+      loki_s3_bucket: "big-bang-aws-loki-s3"
+      # -- Region of the AWS S3 bucket for use with Loki
+      loki_s3_aws_region: "us-west-2"
+      # -- Role ARN of the AWS S3 bucket for use with Loki
+      loki_s3_role_arn: "arn:aws:iam::000000000000:role/big-bang-aws-0a0a0a0-loki-logging-loki-irsa"
+      # -- AWS S3 bucket for use with Velero
+      velero_s3_bucket: "big-bang-aws-velero-s3"
+      # -- Region of the AWS S3 bucket for use with Velero
+      velero_s3_aws_region: "us-west-2"
+      # -- Role ARN of the AWS S3 bucket for use with Velero
+      velero_s3_role_arn: "arn:aws:iam::000000000000:role/big-bang-aws-0a0a0a0-velero-velero-velero-server-irsa"
+      # -- Role ARN of the AWS S3 bucket for use with Route53 - external-dns
+      route53_role_arn: "arn:aws:iam::000000000000:role/external-dns-role-big-bang-aws-0a0a0a0-0a0a0a0a"
