--- a/.github/workflows/test-dubbd-aws-install.yaml
+++ b/.github/workflows/test-dubbd-aws-install.yaml
@@ -38,7 +38,7 @@ jobs:
         with:
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
-          working-dir: .github/workflows/ci-dubbd-iac-aws
+          working-dir: .github/test-infra/ci-dubbd-iac-aws
           download-init-package: true
           timeout-minutes: 60
 
@@ -61,7 +61,7 @@ jobs:
 
       - name: Package EKSCTL
         run: zarf package create --confirm
-        working-directory: .github/workflows/eks
+        working-directory: .github/test-infra/eks
 
       - name: Create EKS cluster
         run: |
@@ -70,7 +70,7 @@ jobs:
           zarf package deploy zarf-package-distro-eks-multi.tar.zst \
             --set cluster_name="${{ steps.get_cluster_name.outputs.eks_cluster_name }}" \
             --confirm
-        working-directory: .github/workflows/eks #just holds the zarf-config
+        working-directory: .github/test-infra/eks #just holds the zarf-config
         id: create-cluster
 
       - name: Show Cluster
@@ -101,7 +101,7 @@ jobs:
 
             # adds ZARF_PACKAGE_DEPLOY_SET env var for use in zarf package deploy
             echo "zarf_pkg_env_vars=$(cat setenv-dubbd-package.sh)" >> $GITHUB_OUTPUT
-        working-directory: .github/workflows/ci-dubbd-iac-aws
+        working-directory: .github/test-infra/ci-dubbd-iac-aws
         timeout-minutes: 60
 
       - name: Deploy DUBBD-AWS
@@ -131,7 +131,7 @@ jobs:
       - name: Remove CI-DUBBD-IAC-AWS
         if: always()
         run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: .github/workflows/ci-dubbd-iac-aws
+        working-directory: .github/test-infra/ci-dubbd-iac-aws
         timeout-minutes: 60
         continue-on-error: true
 
@@ -140,6 +140,6 @@ jobs:
         # can't do a zarf package remove since there's no kubernetes cluster.
         run: |
           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
-        working-directory: .github/workflows/eks
+        working-directory: .github/test-infra/eks
         timeout-minutes: 60
         continue-on-error: true
