--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -308,9 +308,6 @@ components:
       - name: slack-alerts
         files:
           - manifests/alerts/flux-alerts.yaml
-      - name: kiali-grafana-temp-fix-credentials
-        files:
-          - manifests/kiali-grafana-temp-fix-credentials.yaml
     extensions:
       bigbang:
         version: "###ZARF_PKG_TMPL_BIGBANG_VERSION###"
@@ -329,3 +326,21 @@ components:
           - ../values/dubbd-values.yaml
   - name: dubbd-post-upgrade
     required: true
+    actions:
+      onDeploy:
+        after:
+          - cmd: |
+              ./zarf tools kubectl apply -f kiali-grafana-temp-fix-credentials.yaml
+              ./zarf tools kubectl -n kiali delete pods -l app.kubernetes.io/name=kiali --ignore-not-found --timeout=2m
+            dir: run/manifests
+            description: "Create credentials for integration with Grafana & cycle Kiali pod(s)"
+      onRemove:
+        after:
+          - cmd: |
+              ./zarf tools kubectl delete -f kiali-grafana-temp-fix-credentials.yaml
+            dir: run/manifests
+            description: "Remove Kiali credentials for integration with Grafana"
+    files:
+      - source: manifests/kiali-grafana-temp-fix-credentials.yaml
+        target: run/manifests/kiali-grafana-temp-fix-credentials.yaml
+        executable: true
