--- a/.github/workflows/create-compliance-md-images.yaml
+++ b/.github/workflows/create-compliance-md-images.yaml
@@ -26,6 +26,7 @@ jobs:
         run: |
           npm install jsdom
           npm install js-yaml
+          npm install d3
 
       - name: Download Javascript Image generator
         run: |
