--- a/.github/workflows/create-compliance-md-images.yaml
+++ b/.github/workflows/create-compliance-md-images.yaml
@@ -33,7 +33,7 @@ jobs:
           git clone https://github.com/defenseunicorns/compliance-md-generator.git
           cd compliance-md-generator/
           node generatePieChartSvg.js
-          cp -R compliance-images/* ..
+          cp -R compliance-images/* ../compliance-images/
           cd ..
 
       - name: Clean Up
