feat: default cert-manager

--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -222,6 +222,22 @@ components:
     required: true
   - name: dubbd-pre-upgrade
     required: true
+  - name: cert-manager-chart
+    required: true
+    charts: 
+      - name: cert-manager
+        url: https://charts.jetstack.io
+        gitPath: jetstack/cert-manager
+        version: "v1.12.4"
+        namespace: cert-manager
+        releaseName: cert-manager
+        valuesFiles: 
+          - ../values/cert-manager.yaml
+    images:
+      - "registry1.dso.mil/ironbank/jetstack/cert-manager-cainjector:v1.12.4"
+      - "registry1.dso.mil/ironbank/jetstack/cert-manager-webhook:v1.12.4"
+      - "registry1.dso.mil/ironbank/jetstack/cert-manager-controller:v1.12.4"
+      - "registry1.dso.mil/ironbank/jetstack/cert-manager-ctl:v1.12.4"
   - name: bigbang
     required: true
     actions:
