fix: revert Kiali fix now present in BB v2.10.0

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -185,6 +185,8 @@ components:
       path: ../external-dns
   - name: dubbd-post-upgrade
     required: true
+    import:
+      path: ../../defense-unicorns-distro
     actions:
       onDeploy:
         after:
