--- a/defense-unicorns-distro/deploy-cert-resources.yaml
+++ b/defense-unicorns-distro/deploy-cert-resources.yaml
@@ -1,33 +1,1 @@
-# custom cert-manager resources manifest
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: selfsigned-issuer
-spec:
-  selfSigned: {}
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: my-selfsigned-ca
-  namespace: cert-manager
-spec:
-  isCA: true
-  commonName: my-selfsigned-ca
-  secretName: root-secret
-  privateKey:
-    algorithm: RSA
-    size: 4096
-  issuerRef:
-    name: selfsigned-issuer
-    kind: ClusterIssuer
-    group: cert-manager.io
----
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: my-ca-issuer
-  namespace: cert-manager
-spec:
-  ca:
-    secretName: root-secret
+# additional manifests for custom cert-manager resources
