--- a/defense-unicorns-distro/zarf-config.yaml
+++ b/defense-unicorns-distro/zarf-config.yaml
@@ -14,3 +14,5 @@ package:
       key_file: bigbang.dev.key
       # -- TLS cert
       cert_file: bigbang.dev.cert
+      # -- TLS secret name
+      tls_secret_name: istio-gateway-tls
