--- a/k3d/deploy-cert-resources.yaml
+++ b/k3d/deploy-cert-resources.yaml
@@ -8,12 +8,12 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: my-selfsigned-ca
+  name: bootstrap-ca-cert
   namespace: cert-manager
 spec:
   isCA: true
-  commonName: my-selfsigned-ca
-  secretName: root-secret
+  commonName: bootstrap-ca-cert
+  secretName: bootstrap-ca
   privateKey:
     algorithm: RSA
     size: 4096
@@ -25,8 +25,25 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: my-ca-issuer
+  name: bigbang-ca-issuer
   namespace: cert-manager
 spec:
   ca:
-    secretName: root-secret
+    secretName: bootstrap-ca
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: istio-gateway-cert
+  namespace: cert-manager
+spec:
+  isCA: true
+  commonName: bigbang-istio-gateway
+  secretName: istio-gateway-tls
+  privateKey:
+    algorithm: RSA
+    size: 4096
+  issuerRef:
+    name: bigbang-ca-issuer
+    kind: ClusterIssuer
+    group: cert-manager.io
