--- a/k3d/deploy-cert-resources.yaml
+++ b/k3d/deploy-cert-resources.yaml
@@ -34,7 +34,24 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: istio-gateway-cert
+  name: admin-cert
+  namespace: cert-manager
+spec:
+  isCA: true
+  commonName: bigbang-istio-gateway
+  secretName: istio-gateway-tls
+  privateKey:
+    algorithm: RSA
+    size: 4096
+  issuerRef:
+    name: bigbang-ca-issuer
+    kind: ClusterIssuer
+    group: cert-manager.io
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: tenant-cert
   namespace: cert-manager
 spec:
   isCA: true
