--- a/k3d/zarf-config.yaml
+++ b/k3d/zarf-config.yaml
@@ -10,7 +10,7 @@ package:
       flux_version: "2.0.1"
   deploy:
     set:
-      # -- Domain name for the EKS cluster
+      # -- Domain name for the K3D cluster
       domain: bigbang.dev
       # -- TLS key
       key_file: bigbang.dev.key
