--- a/rke2/zarf.yaml
+++ b/rke2/zarf.yaml
@@ -34,7 +34,7 @@ variables:
     autoIndent: true
 
 components:
-  - name: set-ephemeral
+  - name: set-zarf-vars
     required: true
   - name: preflight
     required: true
