added howto-cert-manager.md to docs

--- a/values/cert-manager.yaml
+++ b/values/cert-manager.yaml
@@ -19,13 +19,12 @@ startupapicheck:
 
 installCRDs: true
 
+# delete secret if certificate is deleted
 extraArgs:
   - --enable-certificate-owner-ref=true
 
 securityContext:
   runAsNonRoot: true
 
-  # prometheus.serviceMonitor must remain disabled for install
-  # due to dependency issues.
-  # A ServiceMonitor resource will be deployed separately after
-  # DUBBD has fully deployed and the ServiceMonitor CRD definition exists.
+# prometheus.serviceMonitor must remain disabled for install due to dependency timing issues.
+# A ServiceMonitor resource will be deployed separately after DUBBD has fully deployed and the ServiceMonitor CRD definition exists.
