fix: update dubbd-aws with new e-dns component

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -175,6 +175,10 @@ components:
             mute: true
             setVariables:
               - name: TENANT_INGRESS_UPDATE
+  - name: set-external-dns-domain
+    required: true
+    import:
+      path: ../external-dns
   - name: external-dns-k8s-manifests
     required: true
     import:
